<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white_full"
    android:id="@+id/container"
    android:layout_height="match_parent"
    android:transcriptMode="normal">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <!-- input email - pass -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/ll_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="1">

            <EditText
                android:id="@+id/edt_title_support"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heigh_view_nomal"
                android:layout_margin="@dimen/padding_item_half"
                android:drawableLeft="@drawable/ic_title_project_blue"
                android:drawablePadding="@dimen/padding_item_half"
                android:hint="@string/txt_tile_project"
                android:textColorHint="@color/dark_ness_hint"
                android:textSize="@dimen/font_normal"
                android:gravity="center_vertical"
                android:textCursorDrawable="@drawable/cursor_edittext"
                android:imeOptions="actionNext"
                android:background="@null"
                android:textColor="@color/PrimaryColor" />
            <EditText
                android:id="@+id/edt_txt_content_support"
                android:layout_width="match_parent"
                android:layout_below="@+id/edt_title_support"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_item_half"
                android:drawableLeft="@drawable/ic_title_project_blue"
                android:drawablePadding="@dimen/padding_item_half"
                android:hint="@string/txt_content_support"
                android:textColorHint="@color/dark_ness_hint"
                android:textSize="@dimen/font_normal"
                android:gravity="center_vertical"
                android:textCursorDrawable="@drawable/cursor_edittext"
                android:imeOptions="actionNext"
                android:background="@null"
                android:textColor="@color/PrimaryColor" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_create_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/txt_create_new"
        android:textColor="@color/white_full"
        android:layout_alignParentRight="true"
        android:padding="@dimen/padding_item_half"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_item_small"
        android:textSize="@dimen/font_normal"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_below="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="11.83"
        android:background="@color/message_background"
        android:padding="8dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_small"
        android:background="@color/PrimaryColor"
        android:layout_above="@+id/lnl_input_chat"/>

    <RelativeLayout
        android:id="@+id/lnl_input_chat"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="5">

        <ImageButton
            android:id="@+id/imb_send_comment"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/ic_send_message" />

        <EditText
            android:id="@+id/edt_chat_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/imb_send_comment"
            android:background="@null"
            android:hint="@string/txt_input_comment"
            android:inputType="textCapSentences" />
    </RelativeLayout>

</RelativeLayout>